added multiple benchmark spark logic